--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>BLOGGER - Sam Tong</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css" integrity="sha384-MlJdn/WNKDGXveldHDdyRP1R4CTHr3FeuDNfhsLPYrq2t0UBkUdK2jyTnXPEK1NQ" crossorigin="anonymous">
-        <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.js" integrity="sha384-VQ8d8WVFw0yHhCk5E8I86oOhv48xLpnDZx5T9GogA/Y84DcCKWXDmSDfn13bzFZY" crossorigin="anonymous"></script>
-        <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/contrib/auto-render.min.js" integrity="sha384-+XBljXPPiv+OzfbB3cVmLHf4hdUFHlWNZN5spNQ7rmHTXpd7WvJum6fIACpNNfIR" crossorigin="anonymous"></script>
-        <script src="https://www.tmysam.top/essayCode/essayCodeParser.js"></script>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/katex.min.css">
     </head>
     <body>
         <div id="content">
@@ -27,5 +24,8 @@
             <a class="beiana" href="https://beian.miit.gov.cn/">吉ICP备17003700号-1</a>
         </div>
     </body>
-    <script src="js/blogger.js"></script>
+    <script src="js/blogger.min.js"></script>
+    <script src="https://www.tmysam.top/essayCode/essayCodeParser.min.js"></script>
+    <script src="js/katex.min.js"></script>
+    <script src="js/auto-render.min.js"></script>
 </html>
