--- a/read.html
+++ b/read.html
@@ -2,30 +2,29 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="initial-scale=1.0">
         <title>BLOGGER - Sam Tong</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/katex.min.css">
+        <link rel="stylesheet" href="css/vscode-darkplus.css">
     </head>
     <body>
         <div id="content">
-            <div class="topInfo">
+            <div id="topInfo" class="topInfo">
                 BLOGGER
             </div>
-            <div id="pageInfo">
-                广场
-            </div>
-            <div id="passagelist" class="">
-            </div>
-            <div id="read" class="hidden">
+            <div id="read">
                 
             </div>
         </div>
         <div id="beian">
-            <a class="beiana" href="https://beian.miit.gov.cn/">吉ICP备17003700号-1</a>
+            <a class="beiana" href="https://beian.miit.gov.cn/" target="_blank">吉ICP备17003700号-1</a>
         </div>
     </body>
-    <script src="js/blogger-dev.js"></script>
-    <script src="https://www.tmysam.top/essayCode/essayCodeParser.min.js"></script>
+    <script src="js/read.js"></script>
+    <script src="essayCode/essayCodeParser.min.js"></script>
     <script src="js/katex.min.js"></script>
     <script src="js/auto-render.min.js"></script>
+    <script src="js/mhchem.min.js"></script>
+    <script src="js/highlight.min.js"></script>
 </html>
