--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="initial-scale=1.0">
         <title>BLOGGER - Sam Tong</title>
         <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/katex.min.css">
     </head>
     <body>
         <div id="content">
@@ -14,18 +14,12 @@
             <div id="pageInfo">
                 广场
             </div>
-            <div id="passagelist" class="">
-            </div>
-            <div id="read" class="hidden">
-                
+            <div id="passagelist">
             </div>
         </div>
         <div id="beian">
-            <a class="beiana" href="https://beian.miit.gov.cn/">吉ICP备17003700号-1</a>
+            <a class="beiana" href="https://beian.miit.gov.cn/" target="_blank">吉ICP备17003700号-1</a>
         </div>
     </body>
-    <script src="js/blogger.min.js"></script>
-    <script src="https://www.tmysam.top/essayCode/essayCodeParser.min.js"></script>
-    <script src="js/katex.min.js"></script>
-    <script src="js/auto-render.min.js"></script>
+    <script src="js/contents.js"></script>
 </html>
