修复严重验证码漏洞

--- a/editor.html
+++ b/editor.html
@@ -3,11 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>BLOGGER Editor - Sam Tong</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css" integrity="sha384-MlJdn/WNKDGXveldHDdyRP1R4CTHr3FeuDNfhsLPYrq2t0UBkUdK2jyTnXPEK1NQ" crossorigin="anonymous">
-        <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.js" integrity="sha384-VQ8d8WVFw0yHhCk5E8I86oOhv48xLpnDZx5T9GogA/Y84DcCKWXDmSDfn13bzFZY" crossorigin="anonymous"></script>
-        <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/contrib/auto-render.min.js" integrity="sha384-+XBljXPPiv+OzfbB3cVmLHf4hdUFHlWNZN5spNQ7rmHTXpd7WvJum6fIACpNNfIR" crossorigin="anonymous"></script>
-        <script src="https://www.tmysam.top/essayCode/essayCodeParser.js"></script>
         <link rel="stylesheet" href="css/editor.css">
+        <link rel="stylesheet" href="css/katex.min.css">
+        <link rel="stylesheet" href="css/vscode-darkplus.css">
     </head>
     <body>
         <div id="content">
@@ -39,4 +37,9 @@
         </div>
     </body>
     <script src="js/editor.js"></script>
+    <script src="essayCode/essayCodeParser.js"></script>
+    <script src="js/katex.min.js"></script>
+    <script src="js/auto-render.min.js"></script>
+    <script src="js/mhchem.min.js"></script>
+    <script src="js/highlight.min.js"></script>
 </html>
