--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1.0">
         <title>BLOGGER - Sam Tong</title>
+        <link rel="prefetch" href="js/read.js">
+        <link rel="prefetch" href="js/katex.min.js">
+        <link rel="prefetch" href="js/auto-render.min.js">
+        <link rel="prefetch" href="js/mhchem.min.js">
+        <link rel="prefetch" href="js/highlight.min.js">
+        <link rel="prefetch" href="essayCode/essayCodeParser.min.js">
         <link rel="stylesheet" href="css/style.css">
+        <!-- Matomo -->
+        <script>
+            var _paq = window._paq = window._paq || [];
+            /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+            _paq.push(['trackPageView']);
+            _paq.push(['enableLinkTracking']);
+            (function() {
+            var u="//security.tmysam.top/matomo/";
+            _paq.push(['setTrackerUrl', u+'matomo.php']);
+            _paq.push(['setSiteId', '2']);
+            var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+            g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+            })();
+        </script>
+        <!-- End Matomo Code -->
     </head>
     <body>
+        <!--<div id="caution">
+            <i class="iconfont">&#xe625;</i>Caution info here
+        </div>-->
         <div id="content">
             <div class="topInfo">
                 BLOGGER
