--- a/read.html
+++ b/read.html
@@ -7,6 +7,21 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/katex.min.css">
         <link rel="stylesheet" href="css/vscode-darkplus.css">
+        <!-- Matomo -->
+        <script>
+            var _paq = window._paq = window._paq || [];
+            /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+            _paq.push(['trackPageView']);
+            _paq.push(['enableLinkTracking']);
+            (function() {
+            var u="//security.tmysam.top/matomo/";
+            _paq.push(['setTrackerUrl', u+'matomo.php']);
+            _paq.push(['setSiteId', '2']);
+            var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+            g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+            })();
+        </script>
+        <!-- End Matomo Code -->
     </head>
     <body>
         <div id="content">
@@ -14,15 +29,19 @@
                 BLOGGER
             </div>
             <div id="read">
-                
+            </div>
+            <div class="actionbar">
+                <a href="#" onclick="downloadEssay()" class="action-button">下载文章</a>
+                <a href="https://github.com/TSStudio/essayCode" id="essayCodeButton" class="action-button" target="_blank">EssayCode</a>
+                <a href="https://github.com/TSStudio/essayCode-javascript-parser" id="ECJSPButton" class="action-button" target="_blank">ECJsParser</a>
             </div>
         </div>
         <div id="beian">
             <a class="beiana" href="https://beian.miit.gov.cn/" target="_blank">吉ICP备17003700号-1</a>
         </div>
     </body>
-    <script src="js/read.js"></script>
     <script src="essayCode/essayCodeParser.min.js"></script>
+    <script src="js/read.js"></script>
     <script src="js/katex.min.js"></script>
     <script src="js/auto-render.min.js"></script>
     <script src="js/mhchem.min.js"></script>
