--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="initial-scale=1.0" />
-        <title>BLOGGER - Sam Tong</title>
-        <link rel="prefetch" href="js/read.js" />
-        <link rel="prefetch" href="js/katex.min.js" />
-        <link rel="prefetch" href="js/auto-render.min.js" />
-        <link rel="prefetch" href="js/mhchem.min.js" />
-        <link rel="prefetch" href="js/highlight.min.js" />
-        <link rel="prefetch" href="essayCode/essayCodeParser.min.js" />
+        <title>Contact - Sam Tong</title>
         <link rel="stylesheet" href="css/style.css" />
         <!-- Matomo -->
         <script>
@@ -37,7 +31,9 @@
         </div>-->
         <div id="navigation">
             <div id="function-selector">
-                <div class="page page-selected">博客</div>
+                <div class="page" onclick="window.location.href='index.html'">
+                    博客
+                </div>
                 <div class="page">工具箱</div>
                 <div
                     class="page"
@@ -45,15 +41,19 @@
                 >
                     网站状态
                 </div>
-                <div class="page" onclick="window.location.href='contact.html'">
-                    联系我
-                </div>
+                <div class="page page-selected">联系我</div>
             </div>
         </div>
         <div id="content">
-            <div class="topInfo">BLOGGER</div>
-            <div id="pageInfo">文章广场</div>
-            <div id="passagelist"></div>
+            <div class="topInfo">联系方式</div>
+            <div class="division">邮箱</div>
+            <div class="cnt-txt">
+                个人事务：TSS@mail.tmysam.top<br />团体事务：sam@tsstudio.top<br />校际事务（高中）：i@cl15.top<br />校际事务（大学）：<br />网站问题反馈：web@tsstudio.top
+            </div>
+            <div class="division">地址</div>
+            <div class="cnt-txt">
+                上海市杨浦区邯郸路220号 复旦大学（不接受直接来访，请先邮件沟通）
+            </div>
         </div>
         <div id="beian">
             <a class="beiana" href="https://beian.miit.gov.cn/" target="_blank"
@@ -61,5 +61,4 @@
             >
         </div>
     </body>
-    <script src="js/contents.js"></script>
 </html>
