--- a/read.html
+++ b/read.html
@@ -1,43 +1,60 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1.0">
+        <meta charset="utf-8" />
+        <meta name="viewport" content="initial-scale=1.0" />
         <title>BLOGGER - Sam Tong</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/katex.min.css">
-        <link rel="stylesheet" href="css/vscode-darkplus.css">
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/katex.min.css" />
+        <link rel="stylesheet" href="css/vscode-darkplus.css" />
         <!-- Matomo -->
         <script>
-            var _paq = window._paq = window._paq || [];
+            var _paq = (window._paq = window._paq || []);
             /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-            _paq.push(['trackPageView']);
-            _paq.push(['enableLinkTracking']);
-            (function() {
-            var u="//security.tmysam.top/matomo/";
-            _paq.push(['setTrackerUrl', u+'matomo.php']);
-            _paq.push(['setSiteId', '2']);
-            var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-            g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+            _paq.push(["trackPageView"]);
+            _paq.push(["enableLinkTracking"]);
+            (function () {
+                var u = "//security.tmysam.top/matomo/";
+                _paq.push(["setTrackerUrl", u + "matomo.php"]);
+                _paq.push(["setSiteId", "2"]);
+                var d = document,
+                    g = d.createElement("script"),
+                    s = d.getElementsByTagName("script")[0];
+                g.async = true;
+                g.src = u + "matomo.js";
+                s.parentNode.insertBefore(g, s);
             })();
         </script>
         <!-- End Matomo Code -->
     </head>
     <body>
         <div id="content">
-            <div id="topInfo" class="topInfo">
-                BLOGGER
-            </div>
-            <div id="read">
-            </div>
+            <div id="topInfo" class="topInfo">BLOGGER</div>
+            <div id="read"></div>
             <div class="actionbar">
-                <a href="#" onclick="downloadEssay()" class="action-button">下载文章</a>
-                <a href="https://github.com/TSStudio/essayCode" id="essayCodeButton" class="action-button" target="_blank">EssayCode</a>
-                <a href="https://github.com/TSStudio/essayCode-javascript-parser" id="ECJSPButton" class="action-button" target="_blank">ECJsParser</a>
+                <a href="#" onclick="downloadEssay()" class="action-button"
+                    >下载文章</a
+                >
+                <a
+                    href="https://github.com/TSStudio/essayCode"
+                    id="essayCodeButton"
+                    class="action-button"
+                    target="_blank"
+                    >EssayCode</a
+                >
+                <a
+                    href="https://github.com/TSStudio/essayCode-javascript-parser"
+                    id="ECJSPButton"
+                    class="action-button"
+                    target="_blank"
+                    >ECJsParser</a
+                >
             </div>
         </div>
         <div id="beian">
-            <a class="beiana" href="https://beian.miit.gov.cn/" target="_blank">吉ICP备17003700号-1</a>
+            <a class="beiana" href="https://beian.miit.gov.cn/" target="_blank"
+                >吉ICP备17003700号-1</a
+            >
         </div>
     </body>
     <script src="essayCode/essayCodeParser.min.js"></script>
