--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="initial-scale=1.0" />
         <title>Contact - Sam Tong</title>
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/style.min.css" />
         <!-- Matomo -->
         <script>
             var _paq = (window._paq = window._paq || []);
@@ -34,12 +34,14 @@
                 <div class="page" onclick="window.location.href='index.html'">
                     博客
                 </div>
-                <div class="page">工具箱</div>
                 <div
                     class="page"
                     onclick="window.open('https:\/\/stats.uptimerobot.com/qnqGkT1Bry','_blank');"
                 >
-                    网站状态
+                    网站状态<i class="iconfont-small">&#xe67d;</i>
+                </div>
+                <div class="page" onclick="window.location.href='toolbox.html'">
+                    工具箱
                 </div>
                 <div class="page page-selected">联系我</div>
             </div>
