--- a/toolbox.html
+++ b/toolbox.html
@@ -3,13 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="initial-scale=1.0" />
-        <title>BLOGGER - Sam Tong</title>
-        <link rel="prefetch" href="js/read.js" />
-        <link rel="prefetch" href="js/katex.min.js" />
-        <link rel="prefetch" href="js/auto-render.min.js" />
-        <link rel="prefetch" href="js/mhchem.min.js" />
-        <link rel="prefetch" href="js/highlight.min.js" />
-        <link rel="prefetch" href="essayCode/essayCodeParser.min.js" />
+        <title>Contact - Sam Tong</title>
         <link rel="stylesheet" href="css/style.min.css" />
         <!-- Matomo -->
         <script>
@@ -37,30 +31,23 @@
         </div>-->
         <div id="navigation">
             <div id="function-selector">
-                <div class="page page-selected">博客</div>
+                <div class="page" onclick="window.location.href='index.html'">
+                    博客
+                </div>
                 <div
                     class="page"
                     onclick="window.open('https:\/\/stats.uptimerobot.com/qnqGkT1Bry','_blank');"
                 >
                     网站状态<i class="iconfont-small">&#xe67d;</i>
                 </div>
-                <div class="page" onclick="window.location.href='toolbox.html'">
-                    工具箱
-                </div>
+                <div class="page page-selected">工具箱</div>
                 <div class="page" onclick="window.location.href='contact.html'">
                     联系我
                 </div>
             </div>
         </div>
         <div id="content">
-            <div class="topInfo">BLOGGER</div>
-            <div id="pageInfo">文章广场</div>
-            <div id="passagelist">
-                <div class="loader">
-                    <div class="loaderBar"></div>
-                </div>
-                <div id="error-holder"></div>
-            </div>
+            <div class="topInfo">工具箱</div>
         </div>
         <div id="beian">
             <a class="beiana" href="https://beian.miit.gov.cn/" target="_blank"
@@ -68,5 +55,4 @@
             >
         </div>
     </body>
-    <script src="js/contents.min.js"></script>
 </html>
