Maintaince of Contact List

--- a/contact.html
+++ b/contact.html
@@ -50,11 +50,7 @@
             <div class="topInfo">联系方式</div>
             <div class="division">邮箱</div>
             <div class="cnt-txt">
-                个人事务：TSS@mail.tmysam.top<br />团体事务：sam@tsstudio.top<br />校际事务（高中）：i@cl15.top<br />校际事务（大学）：<br />网站问题反馈：web@tsstudio.top
-            </div>
-            <div class="division">地址</div>
-            <div class="cnt-txt">
-                上海市杨浦区邯郸路220号 复旦大学（不接受直接来访，请先邮件沟通）
+                个人事务：TSS@mail.tmysam.top<br />团体事务：sam@tsstudio.top<br />网站问题反馈：web@tsstudio.top
             </div>
         </div>
         <div id="beian">
