--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="prefetch" href="js/mhchem.min.js" />
         <link rel="prefetch" href="js/highlight.min.js" />
         <link rel="prefetch" href="essayCode/essayCodeParser.min.js" />
-        <link rel="stylesheet" href="css/style.min.css" />
+        <link rel="stylesheet" href="css/style.css" />
         <!-- Matomo -->
         <script>
             var _paq = (window._paq = window._paq || []);
@@ -44,8 +44,11 @@
                 >
                     网站状态<i class="iconfont-small">&#xe67d;</i>
                 </div>
-                <div class="page" onclick="window.location.href='toolbox.html'">
-                    工具箱
+                <div
+                    class="page"
+                    onclick="window.open('https:\/\/toolbox.fudan.cl15.top/','_blank');"
+                >
+                    工具箱<i class="iconfont-small">&#xe67d;</i>
                 </div>
                 <div class="page" onclick="window.location.href='contact.html'">
                     联系我
