--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,11 @@
                 >
                     网站状态<i class="iconfont-small">&#xe67d;</i>
                 </div>
-                <div class="page" onclick="window.location.href='toolbox.html'">
-                    工具箱
+                <div
+                    class="page"
+                    onclick="window.open('https:\/\/toolbox.fudan.cl15.top/','_blank');"
+                >
+                    工具箱<i class="iconfont-small">&#xe67d;</i>
                 </div>
                 <div class="page page-selected">联系我</div>
             </div>
